@@ -309,9 +309,7 @@
 <TD WIDTH="20%" VALIGN="MIDDLE">
 <FONT SIZE=2><P></FONT><A HREF="#plot"><FONT SIZE=2>plot</FONT></A></TD>
 </TR>
-<TR><TD WIDTH="18%" VALIGN="MIDDLE">
-<FONT SIZE=2><P></FONT><A HREF="#pov"><FONT SIZE=2>pov</FONT></A></TD>
-<TD WIDTH="19%" VALIGN="MIDDLE">
+<TR><TD WIDTH="19%" VALIGN="MIDDLE">
 <FONT SIZE=2><P></FONT><A HREF="#prcolor"><FONT SIZE=2>prcolor</FONT></A></TD>
 <TD WIDTH="20%" VALIGN="MIDDLE">
 <FONT SIZE=2><P></FONT><A HREF="#prefix"><FONT SIZE=2>prefix</FONT></A></TD>
@@ -2391,10 +2389,6 @@ foo.r_xpand/R
 
 </B><FONT SIZE=2><P>-- Create a UNIX plot of the current MGED display and pipe the results to the <I>pldebug</I> command. </P></DIR>
 
-<FONT SIZE=2><P><HR ALIGN="RIGHT"></P>
-</FONT><B><DL>
-<DT><A NAME="pov"></A>pov</B> <I>args</DT>
-</I><DD>Set the point-of-view (experimental).</DD>
 </DL>
 <FONT SIZE=2><P><HR ALIGN="RIGHT"></P>
 </FONT><B><DL>
