@@ -1,3 +1,2 @@
 joint
-pov
 solids_on_ray
